src/main/gen/de/cofinpro/intellij/acfeplugin/parser/FormulaEngineParser.java
// This is a generated file. Not intended for manual editing.
package de.cofinpro.intellij.acfeplugin.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static de.cofinpro.intellij.acfeplugin.psi.FormulaEngineElementTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class FormulaEngineParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, EXTENDS_SETS_);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return feFile(b, l + 1);
  }

  public static final TokenSet[] EXTENDS_SETS_ = new TokenSet[] {
    create_token_set_(CALCULATION_EXPRESSION, COMBINATION_EXPRESSION, COMPARISON_EXPRESSION, EXPRESSION,
      LEAF_EXPRESSION, NEGATED_EXPRESSION, PARENTHESIS_EXPRESSION, SHORT_IF_EXPRESSION,
      UNARY_EXPRESSION),
  };

  /* ********************************************************** */
  // (BuiltInVariableName | IdentifierLiteral) (LEFT_BRACKET Expression RIGHT_BRACKET)+
  public static boolean ArrayAccess(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ArrayAccess")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ARRAY_ACCESS, "<array access>");
    r = ArrayAccess_0(b, l + 1);
    r = r && ArrayAccess_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // BuiltInVariableName | IdentifierLiteral
  private static boolean ArrayAccess_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ArrayAccess_0")) return false;
    boolean r;
    r = BuiltInVariableName(b, l + 1);
    if (!r) r = IdentifierLiteral(b, l + 1);
    return r;
  }

  // (LEFT_BRACKET Expression RIGHT_BRACKET)+
  private static boolean ArrayAccess_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ArrayAccess_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = ArrayAccess_1_0(b, l + 1);
    while (r) {
      int c = current_position_(b);
      if (!ArrayAccess_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "ArrayAccess_1", c)) break;
    }
    exit_section_(b, m, null, r);
    return r;
  }

  // LEFT_BRACKET Expression RIGHT_BRACKET
  private static boolean ArrayAccess_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ArrayAccess_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LEFT_BRACKET);
    r = r && Expression(b, l + 1, -1);
    r = r && consumeToken(b, RIGHT_BRACKET);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // RegularAssignment | IdentifierLiteral PostfixOperator | PrefixOperator IdentifierLiteral | OPERATOR_MINUS IdentifierLiteral
  public static boolean Assignment(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Assignment")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ASSIGNMENT, "<assignment>");
    r = RegularAssignment(b, l + 1);
    if (!r) r = Assignment_1(b, l + 1);
    if (!r) r = Assignment_2(b, l + 1);
    if (!r) r = Assignment_3(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // IdentifierLiteral PostfixOperator
  private static boolean Assignment_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Assignment_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = IdentifierLiteral(b, l + 1);
    r = r && PostfixOperator(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // PrefixOperator IdentifierLiteral
  private static boolean Assignment_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Assignment_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = PrefixOperator(b, l + 1);
    r = r && IdentifierLiteral(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // OPERATOR_MINUS IdentifierLiteral
  private static boolean Assignment_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Assignment_3")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, OPERATOR_MINUS);
    r = r && IdentifierLiteral(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // OPERATOR_ADDASSIGNMENT | OPERATOR_SUBTRACTASSIGNMENT | OPERATOR_MULTIPLYASSIGNMENT | OPERATOR_DIVIDEASSIGNMENT | OPERATOR_MODULOASSIGNMENT | OPERATOR_ASSIGNMENT
  static boolean AssignmentOperator(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AssignmentOperator")) return false;
    boolean r;
    r = consumeToken(b, OPERATOR_ADDASSIGNMENT);
    if (!r) r = consumeToken(b, OPERATOR_SUBTRACTASSIGNMENT);
    if (!r) r = consumeToken(b, OPERATOR_MULTIPLYASSIGNMENT);
    if (!r) r = consumeToken(b, OPERATOR_DIVIDEASSIGNMENT);
    if (!r) r = consumeToken(b, OPERATOR_MODULOASSIGNMENT);
    if (!r) r = consumeToken(b, OPERATOR_ASSIGNMENT);
    return r;
  }

  /* ********************************************************** */
  // BUILT_IN_FUNC_ATTRIBUTE
  //     | BUILT_IN_FUNC_DATE | BUILT_IN_FUNC_DATETIME | BUILT_IN_FUNC_DICT | BUILT_IN_FUNC_STR | BUILT_IN_FUNC_FLOAT | BUILT_IN_FUNC_INTEGER | BUILT_IN_FUNC_LIST | BUILT_IN_FUNC_STRING
  //     | BUILT_IN_FUNC_DAYDIFF | BUILT_IN_FUNC_DAYPLUS
  //     | BUILT_IN_FUNC_ELT
  //     | BUILT_IN_FUNC_FIRST
  //     | BUILT_IN_FUNC_HASH_GET | BUILT_IN_FUNC_HASH_PUT | BUILT_IN_FUNC_HASH_ISKEY | BUILT_IN_FUNC_HASH_KEYS
  //     | BUILT_IN_FUNC_IS_LIST | BUILT_IN_FUNC_IS_NA | BUILT_IN_FUNC_IS_STRING
  //     | BUILT_IN_FUNC_KERNEL
  //     | BUILT_IN_FUNC_LEN
  //     | BUILT_IN_FUNC_LOAD
  //     | BUILT_IN_FUNC_MAP
  //     | BUILT_IN_FUNC_MAX
  //     | BUILT_IN_FUNC_OUT
  //     | BUILT_IN_FUNC_REMOVE
  //     | BUILT_IN_FUNC_SORT
  //     | BUILT_IN_FUNC_STATUS
  //     | BUILT_IN_FUNC_TIME
  public static boolean BuiltInFunctionName(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BuiltInFunctionName")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BUILT_IN_FUNCTION_NAME, "<built in function name>");
    r = consumeToken(b, BUILT_IN_FUNC_ATTRIBUTE);
    if (!r) r = consumeToken(b, BUILT_IN_FUNC_DATE);
    if (!r) r = consumeToken(b, BUILT_IN_FUNC_DATETIME);
    if (!r) r = consumeToken(b, BUILT_IN_FUNC_DICT);
    if (!r) r = consumeToken(b, BUILT_IN_FUNC_STR);
    if (!r) r = consumeToken(b, BUILT_IN_FUNC_FLOAT);
    if (!r) r = consumeToken(b, BUILT_IN_FUNC_INTEGER);
    if (!r) r = consumeToken(b, BUILT_IN_FUNC_LIST);
    if (!r) r = consumeToken(b, BUILT_IN_FUNC_STRING);
    if (!r) r = consumeToken(b, BUILT_IN_FUNC_DAYDIFF);
    if (!r) r = consumeToken(b, BUILT_IN_FUNC_DAYPLUS);
    if (!r) r = consumeToken(b, BUILT_IN_FUNC_ELT);
    if (!r) r = consumeToken(b, BUILT_IN_FUNC_FIRST);
    if (!r) r = consumeToken(b, BUILT_IN_FUNC_HASH_GET);
    if (!r) r = consumeToken(b, BUILT_IN_FUNC_HASH_PUT);
    if (!r) r = consumeToken(b, BUILT_IN_FUNC_HASH_ISKEY);
    if (!r) r = consumeToken(b, BUILT_IN_FUNC_HASH_KEYS);
    if (!r) r = consumeToken(b, BUILT_IN_FUNC_IS_LIST);
    if (!r) r = consumeToken(b, BUILT_IN_FUNC_IS_NA);
    if (!r) r = consumeToken(b, BUILT_IN_FUNC_IS_STRING);
    if (!r) r = consumeToken(b, BUILT_IN_FUNC_KERNEL);
    if (!r) r = consumeToken(b, BUILT_IN_FUNC_LEN);
    if (!r) r = consumeToken(b, BUILT_IN_FUNC_LOAD);
    if (!r) r = consumeToken(b, BUILT_IN_FUNC_MAP);
    if (!r) r = consumeToken(b, BUILT_IN_FUNC_MAX);
    if (!r) r = consumeToken(b, BUILT_IN_FUNC_OUT);
    if (!r) r = consumeToken(b, BUILT_IN_FUNC_REMOVE);
    if (!r) r = consumeToken(b, BUILT_IN_FUNC_SORT);
    if (!r) r = consumeToken(b, BUILT_IN_FUNC_STATUS);
    if (!r) r = consumeToken(b, BUILT_IN_FUNC_TIME);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // BUILT_IN_VAR_NA
  //                         | BUILT_IN_VAR_TODAY
  //                         | BUILT_IN_VAR_TIMETODAY
  //                         | BUILT_IN_VAR_SYMBOL
  //                         | BUILT_IN_VAR_NAME
  //                         | BUILT_IN_VAR_PROCESSED
  //                         | BUILT_IN_VAR_PASSED
  //                         | BUILT_IN_VAR_LISTID
  //                         | BUILT_IN_VAR_LISTTP
  //                         | BUILT_IN_VAR_TREEID
  //                         | BUILT_IN_VAR_FIELD
  //                         | BUILT_IN_VAR_FIELDS
  //                         | BUILT_IN_VAR_DATA
  //                         | BUILT_IN_VAR_DATETIME
  //                         | BUILT_IN_VAR_STATUS
  //                         | BUILT_IN_VAR_DEPENDENCIES
  //                         | BUILT_IN_VAR_DEPENDENCIES_TRIGGERS
  public static boolean BuiltInVariableName(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BuiltInVariableName")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BUILT_IN_VARIABLE_NAME, "<built in variable name>");
    r = consumeToken(b, BUILT_IN_VAR_NA);
    if (!r) r = consumeToken(b, BUILT_IN_VAR_TODAY);
    if (!r) r = consumeToken(b, BUILT_IN_VAR_TIMETODAY);
    if (!r) r = consumeToken(b, BUILT_IN_VAR_SYMBOL);
    if (!r) r = consumeToken(b, BUILT_IN_VAR_NAME);
    if (!r) r = consumeToken(b, BUILT_IN_VAR_PROCESSED);
    if (!r) r = consumeToken(b, BUILT_IN_VAR_PASSED);
    if (!r) r = consumeToken(b, BUILT_IN_VAR_LISTID);
    if (!r) r = consumeToken(b, BUILT_IN_VAR_LISTTP);
    if (!r) r = consumeToken(b, BUILT_IN_VAR_TREEID);
    if (!r) r = consumeToken(b, BUILT_IN_VAR_FIELD);
    if (!r) r = consumeToken(b, BUILT_IN_VAR_FIELDS);
    if (!r) r = consumeToken(b, BUILT_IN_VAR_DATA);
    if (!r) r = consumeToken(b, BUILT_IN_VAR_DATETIME);
    if (!r) r = consumeToken(b, BUILT_IN_VAR_STATUS);
    if (!r) r = consumeToken(b, BUILT_IN_VAR_DEPENDENCIES);
    if (!r) r = consumeToken(b, BUILT_IN_VAR_DEPENDENCIES_TRIGGERS);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // OPERATOR_MODULO | OPERATOR_PLUS | OPERATOR_MINUS | OPERATOR_MULTIPLY | OPERATOR_DIVIDE | OPERATOR_POWER
  static boolean CalculationOperator(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CalculationOperator")) return false;
    boolean r;
    r = consumeToken(b, OPERATOR_MODULO);
    if (!r) r = consumeToken(b, OPERATOR_PLUS);
    if (!r) r = consumeToken(b, OPERATOR_MINUS);
    if (!r) r = consumeToken(b, OPERATOR_MULTIPLY);
    if (!r) r = consumeToken(b, OPERATOR_DIVIDE);
    if (!r) r = consumeToken(b, OPERATOR_POWER);
    return r;
  }

  /* ********************************************************** */
  // OPERATOR_AND | OPERATOR_OR | KEYWORD_AND | KEYWORD_OR
  static boolean CombinationOperator(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CombinationOperator")) return false;
    boolean r;
    r = consumeToken(b, OPERATOR_AND);
    if (!r) r = consumeToken(b, OPERATOR_OR);
    if (!r) r = consumeToken(b, KEYWORD_AND);
    if (!r) r = consumeToken(b, KEYWORD_OR);
    return r;
  }

  /* ********************************************************** */
  // OPERATOR_EQUAL | OPERATOR_NOTEQUAL | OPERATOR_GREATERTHANEQUAL | OPERATOR_GREATERTHAN | OPERATOR_LESSTHANEQUAL | OPERATOR_LESSTHAN
  static boolean ComparisonOperator(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ComparisonOperator")) return false;
    boolean r;
    r = consumeToken(b, OPERATOR_EQUAL);
    if (!r) r = consumeToken(b, OPERATOR_NOTEQUAL);
    if (!r) r = consumeToken(b, OPERATOR_GREATERTHANEQUAL);
    if (!r) r = consumeToken(b, OPERATOR_GREATERTHAN);
    if (!r) r = consumeToken(b, OPERATOR_LESSTHANEQUAL);
    if (!r) r = consumeToken(b, OPERATOR_LESSTHAN);
    return r;
  }

  /* ********************************************************** */
  // BuiltInVariableName | NumberLiteral | StringLiteral | ListLiteral | IDENTIFIER
  public static boolean Constant(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Constant")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CONSTANT, "<constant>");
    r = BuiltInVariableName(b, l + 1);
    if (!r) r = NumberLiteral(b, l + 1);
    if (!r) r = StringLiteral(b, l + 1);
    if (!r) r = ListLiteral(b, l + 1);
    if (!r) r = consumeToken(b, IDENTIFIER);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // KEYWORD_CONTINUE SEMICOLON
  static boolean ContinueStatement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ContinueStatement")) return false;
    if (!nextTokenIs(b, KEYWORD_CONTINUE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, KEYWORD_CONTINUE, SEMICOLON);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // While | For | DoWhile | If | Switch
  public static boolean ControlStructure(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ControlStructure")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CONTROL_STRUCTURE, "<control structure>");
    r = While(b, l + 1);
    if (!r) r = For(b, l + 1);
    if (!r) r = DoWhile(b, l + 1);
    if (!r) r = If(b, l + 1);
    if (!r) r = Switch(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // (ControlStructure | Statement)*
  public static boolean ControlStructureBody(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ControlStructureBody")) return false;
    Marker m = enter_section_(b, l, _NONE_, CONTROL_STRUCTURE_BODY, "<control structure body>");
    while (true) {
      int c = current_position_(b);
      if (!ControlStructureBody_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "ControlStructureBody", c)) break;
    }
    exit_section_(b, l, m, true, false, null);
    return true;
  }

  // ControlStructure | Statement
  private static boolean ControlStructureBody_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ControlStructureBody_0")) return false;
    boolean r;
    r = ControlStructure(b, l + 1);
    if (!r) r = Statement(b, l + 1);
    return r;
  }
